# segmentation_gym

./: .gitignore  CITATION.cff  README.md  batch_seg_images_in_folders.py  batch_train_models.py  batch_train_models_no_tkinter.py  commands_to_run_scripts_docker.md  compose.yml  dockerfile  entrypoint.sh  gen_saved_model.py  make_dataset.py  make_dataset_no_tkinter.py  make_nd_dataset.py  make_overlays.py  pyproject.toml  resunet_report.txt  seg_images_in_folder.py  segformer_report.txt  train_model.py  train_model_script_no_tkinter.py
.ipynb_checkpoints/: Segformer-checkpoint.ipynb
install/: gym.yml  gym_py38.yml  gym_test_gpus.dockerfile  imageseg.yml
res_unet/: filter_sample_outputs.py  imports.py  make_dataset.py  seg_images_in_folder.py  train_resunet.py  train_satunet.py  train_unet.py
res_unet/model_training/: imports.py  (+3 more)
src/: prediction_imports.py
unet/: ensemble_seg_images_in_folder.py  make_dataset.py  make_nd_dataset.py  model_imports.py  resunet_report.txt  seg_images_in_folder.py  seg_images_in_folder.py.old  test_models.py  train_model.py  train_model_ndimagery.py  unet_report.txt  viz_npz.py
utils/: batch_pred2map.py  filter_bad_tensors.py  filter_labels.py  gen_fullmodel_from_h5.py  gen_saved_model.py  make_class_balanced_subset.py  make_ndwi_4pred.py  make_ndwi_dataset.py  make_overlays.py  merge_nd_inputs4pred.py  pad_folder_of_images.py  pred2map.py  preprocess_data.py  print_pred_labels.py  recreate_saved_model.py  sort_labels_class_balance.py  test_gpus.py  vggjson2mask.py
vanilla_unet_config/: vanilla_unet_ronneburger2015.json
(+57 files in other folders)
